# estimate-surface-normals-in-a-point-cloud

./: Estimate_normals_from_a_point_cloud.pdfZone.Identifier  README.md
normalEstimation/: CMakeLists.txt  complex_3D_landscape.pngZone.Identifier  cuda_nearest_neighbours.cu  cuda_normal_estimation.cu  depth_map_100_points.pngZone.Identifier  depth_map_50000_points.pngZone.Identifier  depth_map_500k.pngZone.Identifier  kernel.cu  main.cpp  normalComputation.cpp  normalEstimation.cpp  result.pngZone.Identifier
normalEstimation/images/: depth_map_100k.pngZone.Identifier  depth_map_1m.pngZone.Identifier  depth_map_250k.pngZone.Identifier
